--- a/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
+++ b/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
@@ -159,11 +159,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\FitnessCenters.cs" />
+    <Compile Include="Models\Comments.cs" />
     <Compile Include="Models\Enumerations.cs" />
     <Compile Include="Models\FitnessCenter.cs" />
     <Compile Include="Models\GroupTraining.cs" />
     <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\GroupTrainings.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -175,7 +180,10 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="HTML\FitnessCenters.html" />
     <Content Include="HTML\Index.html" />
+    <Content Include="HTML\Login.html" />
+    <Content Include="HTML\Registration.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -198,12 +206,19 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="App_Data\Users.json" />
+    <Content Include="App_Data\Comments.json" />
+    <Content Include="App_Data\GroupTrainings.json" />
+    <Content Include="App_Data\FitnessCenters.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\FitnessCenters.js" />
+    <Content Include="Scripts\Index.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
+    <Content Include="Scripts\Login.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Registration.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
