--- a/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
+++ b/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -180,9 +181,13 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="HTML\FitnessCenters.html" />
+    <Content Include="HTML\Edit_centers.html" />
+    <Content Include="HTML\Edit_trainers.html" />
+    <Content Include="HTML\History.html" />
     <Content Include="HTML\Index.html" />
     <Content Include="HTML\Login.html" />
+    <Content Include="HTML\My_trainings.html" />
+    <Content Include="HTML\Profile.html" />
     <Content Include="HTML\Registration.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -210,7 +215,9 @@
     <Content Include="App_Data\GroupTrainings.json" />
     <Content Include="App_Data\FitnessCenters.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
-    <Content Include="Scripts\FitnessCenters.js" />
+    <Content Include="Scripts\Edit_centers.js" />
+    <Content Include="Scripts\Edit_trainers.js" />
+    <Content Include="Scripts\History.js" />
     <Content Include="Scripts\Index.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -218,6 +225,9 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\Login.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\My_trainings.js" />
+    <Content Include="Scripts\Navigation.js" />
+    <Content Include="Scripts\Profile.js" />
     <Content Include="Scripts\Registration.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
