--- a/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
+++ b/PR060-2019-Web-projekat/PR060-2019-Web-projekat.csproj
@@ -155,6 +155,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CommentsController.cs" />
+    <Compile Include="Controllers\FitnessCentersController.cs" />
+    <Compile Include="Controllers\GroupTrainingsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegistrationController.cs" />
@@ -187,6 +190,7 @@
     <Content Include="Global.asax" />
     <Content Include="HTML\Edit_centers.html" />
     <Content Include="HTML\Edit_trainers.html" />
+    <Content Include="HTML\FitnessCenterDetails.html" />
     <Content Include="HTML\History.html" />
     <Content Include="HTML\Index.html" />
     <Content Include="HTML\Login.html" />
@@ -221,6 +225,7 @@
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\Edit_centers.js" />
     <Content Include="Scripts\Edit_trainers.js" />
+    <Content Include="Scripts\FitnessCenterDetails.js" />
     <Content Include="Scripts\History.js" />
     <Content Include="Scripts\Index.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
